# fm-skin-builder

./: .dockerignore  .gitignore  AGENTS.md  AUTO_UPDATE_IMPLEMENTATION.md  BINDING_EXTRACTION_GUIDE.md  BINDING_EXTRACTION_SUMMARY.md  CLI_UXML_USAGE.md  CONTRIBUTING.md  DOCKER_CATALOGUE.md  Dockerfile  GLOBAL_SELECTOR_REGISTRY_ANALYSIS.md  IMPLEMENTATION_PLAN.md  MERGE_PLAN.md  MULTI_FILE_CSS_DESIGN_PROPOSAL.md  README.md  RELEASES.md  SIMPLIFICATION_PLAN.md  SMART_VARIABLE_PLACEMENT_IMPLEMENTATION.md  SPRINT1_FIXES.md  SPRINT2.5_COMPLETE.md  SPRINT2.5_FINAL_FIX.md  SPRINT2.5_FIXES.md  SPRINT2_COMPLETE.md  SPRINT3_COMPLETE.md  SPRINT3_PLAN.md  UXML_BINARY_STRUCTURE.md  UXML_IMPORT_STATUS.md  UXML_MANIPULATION_GUIDE.md  UXML_PATCHING_STATUS.md  UXML_QUICK_START.md  VARIABLE_ARCHITECTURE_ANALYSIS.md  VTA_STRUCTURE_FINAL.md  analyze_complete_structure.py  analyze_field_4_hierarchy.py  analyze_field_patterns.py  analyze_footer_structure.py  analyze_typeinfo.py  analyze_v2_corruption.py  analyze_vta_header.py  build_test_skin.py  (+42 more)
.devcontainer/: devcontainer.json
.github/: AUTO_UPDATES.md  pull_request_template.md
.husky/: commit-msg  pre-commit  pre-push
docs/: ADVANCED_CSS_GUIDE.md  ARCHITECTURE.md  ASSET_CATALOGUE_PLAN.md  ASSET_CATALOG_COMPLETE.md  ASSET_CATALOG_IMPLEMENTATION.md  ASSET_CATALOG_QUICK_REFERENCE.md  ASSET_EXPLORER.md  BINDING_EXTRACTION.md  BINDING_XML_FORMAT.md  BUILD.md  CAIRO_SETUP.md  CATALOGUE_IMPLEMENTATION.md  CHANGELOG.md  CHANGELOG_SYSTEM.md  CLI_GUIDE.md  CLOUD_CATALOGUE.md  CONTRIBUTING.md  DEPENDENCY_VERIFICATION.md  EXPORT_MODES.md  FONT_FORMAT_GUIDE.md  FONT_IMPLEMENTATION_PLAN.md  FRONTEND_BACKEND_ARCHITECTURE.md  IMPLEMENTATION_STATUS.md  PARALLEL_CATALOGUE.md  PHASE3_CSS_AUGMENTATION.md  PHASE_2_5_README.md  PHASE_2_5_SUMMARY.md  PREVIEW_FEATURE.md  PREVIEW_FIX.md  README.md  RID_MANAGEMENT.md  ROADMAP.md  ROADMAP_IMPORT_EXPORT.md  SESSION_SUMMARY_2025-11-16.md  SESSION_SUMMARY_2025-11-17.md  SKIN_FORMAT.md  SPRITE_EXTRACTION.md  TESTING_UXML.md  TODO.md  USS_SERIALIZATION_TECHNICAL.md  (+5 more)
examples/: README.md  export_uxml.py  import_uxml.py
fm_skin_builder/: __init__.py  __main__.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: cache.rs  commands.rs  events.rs  main.rs  paths.rs  process.rs
hooks/: hook-cairocffi.py  rthook_cairocffi.py
scripts/: bootstrap.mjs  build_backend.sh  build_css_uxml_catalog.py  build_skin.sh  clear_patch_cache.py  delete_r2_prefix.py  download_bundle_group.py  download_bundles_from_r2.py  extract_sprites.py  generate_asset_explorer.py  generate_css_uxml_explorer.py  generate_css_uxml_explorer_dynamic.py  generate_post_merge_changelog.py  generate_sprite_index.py  get_next_version.py  lint_python.sh  lint_rust.sh  merge_catalogues.py  run_gui.sh  run_tauri.sh  setup_python_env.ps1  setup_python_env.sh  split_bundles.py  tauri_dev_local.sh  update_latest_metadata.py  upload_bundles_to_r2.py  upload_catalogue_to_r2.py  upload_release_to_r2.py
src/cli/: main.py
test_bundles/: ui-backgrounds_assets_.bundle  ui-backgrounds_assets_1x.bundle  ui-backgrounds_assets_2x.bundle  ui-backgrounds_assets_3x.bundle  ui-backgrounds_assets_4x.bundle  ui-bounds_assets_all.bundle  ui-charts_assets_all.bundle  ui-columns_assets_all.bundle  ui-dynamiccardcollections_assets_all.bundle  ui-factoryxml_assets_all.bundle  ui-icons_assets_1x.bundle  ui-icons_assets_2x.bundle  ui-icons_assets_3x.bundle  (+10 more)
(+701 files in other folders)
