[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fm-skin-builder"
version = "0.1.0"
description = "Football Manager 2026 Skin Builder (CLI + core + desktop shell)"
authors = [{name="Tom Stone"}]
requires-python = "==3.9.19"
dependencies = [
    "click>=8.1.7",
    "rich>=13.7.1",
    "pydantic>=2.8.0",
    "jsonschema>=4.23.0",
    "platformdirs>=4.3.0"
]

[tool.setuptools.packages.find]
include = ["fm_skin_builder*"]

[project.scripts]
fm-skin = "fm_skin_builder.cli.main:entrypoint"

[tool.black]
line-length = 100
