[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fm-skin-builder"
version = "0.1.0"
description = "Football Manager 2026 Skin Builder (CLI + core + desktop shell)"
authors = [{name="Tom Stone"}]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7",
    "rich>=13.7.1",
    "pydantic>=2.8.0",
    "jsonschema>=4.23.0",
    "platformdirs>=4.3.0",
    "pytest>=8.3.2",
    "UnityPy==1.23.0",
    "cairosvg>=2.7.1",
    "svg.path>=6.4.0",
    "Pillow>=10.3.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "colormath>=3.0.0",
    "texture2ddecoder>=1.0.0",
    "boto3>=1.34.0",
    "fonttools>=4.47.0",
]

[tool.setuptools.packages.find]
include = ["fm_skin_builder*"]

[project.scripts]
fm-skin = "fm_skin_builder.cli.main:entrypoint"

[tool.black]
line-length = 100
