[package]
name = "fm_skin_builder_app"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-store = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-updater = "2.0"
rfd = { version = "0.15", default-features = false, features = ["xdg-portal"] }
tokio = { version = "1", features = ["process", "io-util", "rt", "sync", "time"] }

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
