[package]
name = "fm_skin_builder_app"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-store = "2.0"
tauri-plugin-shell = "2.0"
tauri-plugin-http = "2.0"
tauri-plugin-updater = "2.0"
tokio = { version = "1", features = ["process", "io-util", "rt", "sync", "time"] }
reqwest = { version = "0.12", features = ["json"] }

# Platform-specific rfd and dialog plugin configuration to avoid gtk3/xdg-portal conflict
[target.'cfg(target_os = "linux")'.dependencies]
tauri-plugin-dialog = { version = "2.0", default-features = false }
rfd = { version = "0.15", default-features = false, features = ["gtk3", "async-std"] }

[target.'cfg(not(target_os = "linux"))'.dependencies]
tauri-plugin-dialog = "2.0"
rfd = "0.15"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }
